--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 ### python3.10
 
 opencv-python==4.7.0.68
-torch==1.13.1
-torchvision==0.14.1
+torch==1.13.1+cpu
+torchvision==0.14.1+cpu
 pandas==1.5.3
 numpy==1.24.1
 nltk==3.8.1
