--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 /application/__pycache__/**
+/application/test/__pycache__/**
 /utils/__pycache__/**
 .idea/**
 /models/**
 /training_log.txt
 /resources/**
+/.pytest_cache/**
